--- a/public/test.css
+++ b/public/test.css
@@ -212,7 +212,7 @@ ul img{
   padding-left: 50px!important;
 }
 
-#guessGame, #guessGame button, input, span{
+#dispTheLett, #guessGame, #guessGame button, input, span{
   font-size: 24px;
 }
 
